--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -6,6 +6,10 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{listings}
+\usepackage{xcolor}
+
+\include{codestyle}
 
 \begin{document}
 \include{01_titlepage}
@@ -17,6 +21,7 @@
 \include{02_introduction}
 \include{03_data}
 \include{04_classification}
+\include{05_experiments}
 
 \include{bibliography}
 \end{document}
