--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -20,8 +20,10 @@
 
 \include{02_introduction}
 \include{03_data}
-\include{04_classification}
+\include{04_theory}
 \include{05_experiments}
+\include{06_conclusions}
 
 \include{bibliography}
 \end{document}
+	
