Some typos fixed.

--- a/thesis/05_experiments.tex
+++ b/thesis/05_experiments.tex
@@ -110,7 +110,6 @@ Typical aura without migraine      0.67    0.40      0.50         5
 Niezwykle istotną możliwością wykorzystania Naiwnego Klasyfikatora Bayesa było wyświetlenie podobieństwa testowanej klasy względem wszystkich klas.\\
 
 Niektóre z klas (niekoniecznie te bardziej licznie) przedstawiały bardzo jednoznaczną klasyfikację, np:\\
-\newpage
 
 \begin{verbatim}
     Other
@@ -283,7 +282,7 @@ model.compile(optimizer='Adam',
               metrics=['accuracy'])
 \end{lstlisting}
 
-W powyzszej definicji mamy:
+W powyższej definicji mamy:
 \begin{enumerate}
     \item definicje modelu sekwencyjnego
     \item definicje warstwy gęstej (Dense, wszystkie neurony połączone) z 64 neuronami i funkcją aktywacji ReLU.
