Some changes in notebooks.

--- a/notebooks/01_classification_25.ipynb
+++ b/notebooks/01_classification_25.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +220,65 @@
     "print('współczynnik zarysu:\\t\\t', silhouette_score(X, predictions))\n",
     "print('indeks Calińskiego-Harabasza:\\t', calinski_harabasz_score(X, predictions))\n",
     "print('indeks Daviesa-Bouldina:\\t', davies_bouldin_score(X, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import CategoricalNB\n",
+    "\n",
+    "gnb = CategoricalNB()\n",
+    "\n",
+    "y_pred = gnb.fit(X_train, y_train).predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               precision    recall  f1-score   support\n",
+      "\n",
+      "            Basilar-type aura       1.00      0.88      0.93         8\n",
+      " Familial hemiplegic migraine       0.75      0.60      0.67         5\n",
+      "        Migraine without aura       0.29      0.18      0.22        11\n",
+      "                        Other       1.00      1.00      1.00         4\n",
+      " Sporadic hemiplegic migraine       0.00      0.00      0.00         5\n",
+      "   Typical aura with migraine       0.76      0.92      0.83        62\n",
+      "Typical aura without migraine       0.67      0.40      0.50         5\n",
+      "\n",
+      "                     accuracy                           0.75       100\n",
+      "                    macro avg       0.64      0.57      0.59       100\n",
+      "                 weighted avg       0.69      0.75      0.71       100\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred = gnb.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_true = y_test, y_pred = y_pred))"
    ]
   },
   {
