Till Lime and shap in thesis.

--- a/thesis/05_experiments.tex
+++ b/thesis/05_experiments.tex
@@ -334,7 +334,7 @@ Najciekawszym aspektem wykorzystania funkcji Softmax jest możliwość wyświetl
     Class: Typical aura without migraine, Probability: 0.00
 \end{verbatim}
 
-a drugi z nich wyświetlał tablę: enkodowana etykieta klasy, pełna etykieta klasy i prawdopodobieństwo do danej klasy analizowanego przypadku. Wartości uszeregowane malejąco wg podobieństwa:
+a drugi z nich wyświetlał tabelę: enkodowana etykieta klasy, pełna etykieta klasy i prawdopodobieństwo do danej klasy analizowanego przypadku. Wartości uszeregowane malejąco wg podobieństwa:
 
 \begin{verbatim}
                                 Type  Probabilities
