--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,7 +22,8 @@
 \include{03_data}
 \include{04_theory}
 \include{05_experiments}
-\include{06_conclusions}
+\include{06_shap_and_lime}
+\include{07_conclusions}
 
 \include{bibliography}
 \end{document}
